Issue 157:	The pop-up icon is partly hidden by another text field on the very right column when description attribute is set.
Update issue 157
Status: Fixed
Add white-space style to tab.css.

git-svn-id: https://infoscoop.googlecode.com/svn/trunk@287 d4e23b88-c782-11de-b6dc-25c59a28ecba

--- a/src/main/web/skin/tab.css
+++ b/src/main/web/skin/tab.css
@@ -128,6 +128,7 @@
 	font-weight:bold;
 	font-size:11px;
 	color:gray;
+	white-space:nowrap;
 }
 .infoScoop #tabs .tab.selected .tabTitle {
     color:#627EB7;
